Fix publish workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ workflows:
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+$/
-      - publish-github-release:
+      - publish:
           requires:
             - build
           filters:
